Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63014

[winRT]: When previewing the image from camera the orientation may not be correct as it may be upside down

    XMLWordPrintable

Details

    • WinRT
    • 82789905f291033504427a1406da430d744fe843 in 5.9, c47553562264ea4d157772a8ff38a8832b93407a in 5.11

    Description

      [winRT]: When previewing the image from camera the orientation may not be correct as it may be upside down.

      This is improved with the patch here - https://codereview.qt-project.org/#/c/159786/3 - but in the case of a Microsoft Surface Book it is incorrect in portrait mode with the front camera.

      On a HP tablet it is incorrect in all cases even with the patch.

      Attachments

        For Gerrit Dashboard: QTBUG-63014
        # Subject Branch Project Status CR V

        Activity

          People

            owolff Oliver Wolff
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes