winrt: Fix rotation of camera image

Task-number: QTBUG-63014
Change-Id: I6afacdb31f13a9e95784afaab90029a77f9fabfc
Reviewed-by: VaL Doroshchuk <valentyn.doroshchuk@qt.io>
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>
(cherry picked from commit c47553562264ea4d157772a8ff38a8832b93407a)